--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
         <input type="text" name="Header text" id="header-in" placeholder="Header text (Empty = no header)">
         <input type="text" name="Body text 1" id="body1-in" placeholder="Bullet 1">
         <input type="text" name="Body text 2" id="body2-in" placeholder="Bullet 2">
+        <input type="text" name="Body text 2" id="bg-url" placeholder="Background image URL">
+        <select name="" id="sel"><option value="1">1</option><option value="2">2</option> </select>
 
         <a id="download" download="image.png"><button onclick="download()">save png</button></a>
     </div>
@@ -65,6 +67,8 @@
     </div>
 
     <img class='cuomo-image' id="cuomo-1" src="cuomo-1.png" />
+
+    <img class='cuomo-image' id='bg-1' src="bg-drop.jpg" />
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="work.js"></script>
