lessen bg update delay

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <img class='cuomo-image' id='bg-1' src="bg-drop.jpg" />
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="work.js"></script>
+    <script src="work.js?2"></script>
 </body>
 
 </html>
