bigger fonts, center text splitting, removable header box

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         <input type="text" name="Header text" id="header-in" placeholder="Header text (Empty = no header)">
         <input type="text" name="Body text 1" id="body1-in" placeholder="Bullet 1">
         <input type="text" name="Body text 2" id="body2-in" placeholder="Bullet 2">
+        <input type="text" name="Body text 3" id="body3-in" placeholder="Bullet 3">
         <input type="text" name="Body text 2" id="bg-url" placeholder="Background image URL">
         <select name="" id="sel"><option value="1">1</option><option value="2">2</option> </select>
 
